# apitesting

./: LICENSE  README.md
multi-lang-api-demo-main/: gitflow.md
multi-lang-api-demo-main/dotnet/person_api_service/: Dockerfile  PersonApiService.csproj  Program.cs  README.md  Startup.cs  docker-compose.yml  k8s.yaml
multi-lang-api-demo-main/dotnet/person_api_service/Controllers/: PersonController.cs
multi-lang-api-demo-main/dotnet/person_api_service/Models/: Address.cs  Person.cs
multi-lang-api-demo-main/dotnet/person_api_service/Repositories/: IPersonRepository.cs  MongoPersonRepository.cs  SqlitePersonRepository.cs
multi-lang-api-demo-main/go/person_api_service/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  k8s.yaml  main.go
multi-lang-api-demo-main/go/person_api_service/database/: database.go
multi-lang-api-demo-main/go/person_api_service/models/: person.go
multi-lang-api-demo-main/java/person_api_service/: Dockerfile  README.md  docker-compose.yml  k8s.yaml  pom.xml
multi-lang-api-demo-main/python/person_api_service/: Dockerfile  README.md  docker-compose.yml  k8s.yaml  pyproject.toml
multi-lang-api-demo-main/python/person_api_service/app/: __init__.py  database.py  main.py  models.py  openapi_config.py  repository_interface.py  repository_mongo.py  repository_sqlite.py
multi-lang-api-demo-main/python/person_api_service/tests/: conftest.py  test_person_api_e2e.py
multi-lang-api-demo-main/typescript/person_api_service/: Dockerfile  README.md  docker-compose.yml  jest.config.js  k8s.yaml  openapi.yaml  package.json  tsconfig.json
(+37 files in other folders)
