[tool.poetry]
name = "person_api_service"
version = "0.1.0"
description = "A FastAPI CRUD service for Person entity with search and repository pattern."
authors = ["Your Name <your@email.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
loguru = "^0.7.2"
pymongo = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.11.7"

[tool.ruff]
line-length = 100
exclude = [".venv", "venv", "db", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
